# FaceAI-BGImpact

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  create_video.py  generate_images.py  pyproject.toml  pytest.ini  train.py  upload_file.py
analysis/: analysis.ipynb
configs/: default_gan_config.json  default_stylegan_config.json
data_processing/: create_blur_and_grey.py  create_masks.py  download_all_ffhq.py  download_ffhq.py  download_raw_ffhq.py  paths.py
faceai_bgimpact/: create_video.py  generate_images.py  graph_fids.py  main.py  train.py
faceai_bgimpact/configs/: __init__.py  default_dcgan_config.py  default_stylegan_config.py  default_vae_config.py  normalization_config.json
faceai_bgimpact/data_processing/: create_blur_and_grey.py  create_masks.py  download_all_ffhq.py  download_raw_ffhq.py  paths.py
faceai_bgimpact/models/: __init__.py  abstract_model.py  data_loader.py  utils.py
faceai_bgimpact/models/dcgan_/: __init__.py  dcgan.py  discriminator.py  generator.py
faceai_bgimpact/models/provae/: provae.py
faceai_bgimpact/models/stylegan_/: __init__.py  discriminator.py  generator.py  loss.py  stylegan.py  utils.py
faceai_bgimpact/models/vae_/: decoder.py  encoder.py  vae.py
faceai_bgimpact/scripts/: create_blur_and_grey.py  create_masks.py  create_video.py  download_all_ffhq.py  graph_fids.py  train.py
models/: __init__.py  abstract_model.py  data_loader.py  dcgan.py  gan.py  stylegan.py  test_vae.ipynb  utils.py  vae.py
models/dcgan_/: dcgan.py  discriminator.py  generator.py
models/stylegan_/: __init__.py  discriminator.py  generator.py  loss.py  stylegan.py  utils.py
report/: bibtex.bib  neurips_2020.sty  report.bbl  report.blg  report.synctex(busy)  report.tex
tests/: test_data_loader.py  test_dcgan.py  test_gan.py  test_stylegan.py  test_vae.py
webapp/: docker-compose.yml
webapp/backend/: Dockerfile  create_app.py  extensions.py  main.py  pyproject.toml
webapp/backend/api/: __init__.py  model_manager.py
webapp/backend/api/stylegan/: __init__.py  load_trained_model.py  model_manager.py  models.py  namespace.py  routes.py
webapp/backend/api/vae/: __init__.py  namespace.py  routes.py
webapp/backend/models/: StyleGAN_PCA_ffhq_raw.joblib  StyleGAN_ffhq_raw.pth.REMOVED.git-id  StyleGAN_ffhq_raw_old.pth.REMOVED.git-id
webapp/frontend/: .env  Dockerfile  package-lock.json  package.json  tailwind.config.js  vue.config.js
webapp/frontend/src/: App.vue  apiConfig.js  main.js
webapp/frontend/src/components/: EditControls.vue  ImageDisplay.vue  Settings.vue  SliderGroup.vue  SliderGroupLayers.vue
webapp/frontend/src/plugins/: vuetify.js
webapp/frontend/src/router/: index.js
webapp/frontend/src/views/: GANSpace.vue  Home.vue  LiveDemo.vue  MainLayout.vue  VAESpace.vue
webapp/models/: StyleGAN_PCA_ffhq_grey.joblib  StyleGAN_PCA_ffhq_raw.joblib  StyleGAN_ffhq_grey.pth.REMOVED.git-id  StyleGAN_ffhq_raw.pth.REMOVED.git-id
