[tool.poetry]
name = "faceai-bgimpact"
version = "0.1.0"
authors = ["Thomas Kientz", "Adèle Moreau", "Elena Loumagne"]
description = "FaceAI-BGImpact implements various generative methods and studies the impact of altering the background on the generated images and the training of the models."
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
kaggle = "^1.5.16"
opencv-python-headless = "^4.8.1.78"
pillow = "^10.1.0"
numpy = "^1.26.2"
rembg = "^2.0.52"
ipykernel = "^6.26.0"
matplotlib = "^3.8.1"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
pytest = "^7.4.3"
pytorch-gan-metrics = "^0.5.3"
pip = "^23.3.1"
install = "^1.3.5"
google-api-python-client = "^2.108.0"
google-auth = "^2.23.4"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
imageio = "2.19.3"
imageio-ffmpeg = "0.4.7"

[tool.poetry.scripts]
faceai-bgimpact = "faceai_bgimpact.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
